# compeople-ai-hackathon-dguard

./: Makefile  README.md  deployment_metadata.json  pyproject.toml
app/: agent.py  agent_engine_app.py  medication_data_agent.py  medication_data_agent_prompt.j2  root_agent_prompt.j2
app/utils/: gcp.py  tracing.py  typing.py
deployment/cd/: deploy-to-prod.yaml  staging.yaml
deployment/ci/: pr_checks.yaml
deployment/terraform/: variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
